# rs-pcb2gcode-gui

./: Cargo.toml  build.rs  readme.md
src/: dirs.rs  main.rs  settings.rs  units.rs
src/database/: database.rs
src/settings/: mod.rs  settings_frame_autolevel.rs  settings_frame_common.rs  settings_frame_drill.rs  settings_frame_mill.rs  settings_frame_outline.rs  settings_window.rs
src/tools/: basetool.rs  drill.rs  endmill.rs  mod.rs  tool.rs  vbit.rs
src/ui/: mod.rs
src/ui/custom_object/: mod.rs
src/ui/custom_object/browse_file_object/: imp.rs
src/ui/custom_object/db_label_object/: imp.rs  mod.rs
src/ui/custom_object/entry_object/: imp.rs
src/ui/custom_object/frame_input_output/: imp.rs
src/ui/custom_object/frame_tool_settings/: imp.rs  mod.rs
src/ui/custom_object/frame_tree_tools/: imp.rs  mod.rs
src/ui/custom_object/spin_button_object/: imp.rs  mod.rs
src/ui/custom_object/textview_object/: imp.rs
src/ui/custom_object/tool_setting_object/: imp.rs  mod.rs
src/ui/custom_object/tree_tool_object/: imp.rs  mod.rs
src/ui/custom_object/tree_tool_row/: imp.rs
src/ui/frame/frame_autoleveling/: imp.rs  mod.rs
src/ui/frame/frame_common/: imp.rs  mod.rs
src/ui/frame/frame_drill/: imp.rs  mod.rs
src/ui/frame/frame_input_output/: imp.rs  mod.rs
src/ui/frame/frame_mill/: imp.rs  mod.rs
src/ui/frame/frame_outline/: imp.rs  mod.rs
src/ui/frame/frame_tool_settings/: imp.rs  mod.rs
src/ui/frame/frame_tree_tools/: imp.rs  (+1 more)
src/ui/resources/: resources.gresource.xml
src/ui/window_main/: imp.rs  mod.rs
src/ui/window_tool_db/: imp.rs  mod.rs
(+50 files in other folders)
