[package]
name = "rs-pcb2gcode-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
flexi_logger = "0.28.5"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_12"] }
log = "0.4.22"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[build-dependencies]
glib-build-tools = "0.20.0"
